Progress on styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,39 +9,24 @@
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/common.css">
+        <link rel="stylesheet" href="/css/blog.css">
+
         <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/blog.css">
 
     </head>
     <body id="blog">
 
         <div class="site">
-          <div class="header">
+          <div class="header center-text">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
           </div>
 
           {{ content }}
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
         </div>
 
     </body>
